fix dark mode

--- a/site/public/css/select-widgets.css
+++ b/site/public/css/select-widgets.css
@@ -21,5 +21,8 @@
     font-family: Arial, sans-serif;
     font-size: 16px;
     color: var(--standard-dark-gray);
-    background-color: var(--text-white);
+}
+
+[data-theme="dark"] #select2-time_zone_drop_down-container.select2-selection__rendered {
+    color: var(--text-black) !important;
 }
